--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+# Backend
 backend/node_modules
-frontend/node_modules
-/node_modules
 backend/dist
+backend/.env
+
+# Frontend
+frontend/node_modules
 frontend/build
+
+# Other
+/node_modules
