--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.25"
   },
   "scripts": {
     "start": "node ./dist/app.js",
@@ -12,7 +15,9 @@
     "build": "tsc -p ."
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.7.32",
     "@types/node": "^14.0.23",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
